Fix admin list alignment

--- a/estimator/static/estimator/admin.css
+++ b/estimator/static/estimator/admin.css
@@ -114,11 +114,11 @@ body.model-user.change-list #changelist-form {
 
 body.model-user.change-list #changelist-filter h2 {
   margin: 0;
-  min-width: 7em;
+  flex: 0 0 100%;
 }
 
 body.model-user.change-list #changelist-filter-extra-actions {
-  min-width: 8em;
+  flex: 0 0 100%;
 }
 
 body.model-user.change-list #changelist-filter h3 {
@@ -127,7 +127,7 @@ body.model-user.change-list #changelist-filter h3 {
 }
 
 body.model-user.change-list #changelist-filter details {
-  flex: 1 1 220px;
+  flex: 0 1 calc((100% - 18px) / 2);
   margin: 0;
 }
 
